package com.example.project_android

data class Module(val name: String)